# BseIndiaApi

./: .buildinfo  .gitignore  Constants.html  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: Constants.doctree  environment.pickle  index.doctree  usage.doctree
.github/workflows/: python-publish.yml  sphinx.yml
_sources/: index.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/: requirements.txt
docs/source/: Constants.rst  conf.py  index.rst  usage.rst
src/: BSE.py  __init__.py
src/bse/: BSE.py  __init__.py  constants.py
src/examples/: actions.py  advances.py  ann.py  get_all_announcements.py  news.py
src/samples/: actions.json  advanceDecline.json  allAnnouncements.json  allCorporateActions.json  announcements.json  corporateActions.json  gainers.json  listSecurities.json  lookup.json  losers.json  near52WeekHighLow.json  quote.json  quoteWeeklyHL.json  resultCalendar.json  scripMeta.json
tests/: Dockerfile  context.py  test_symbol_parser.py
