[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bse"
version = "2.0.3"
authors = [
  { name="Benny Thadikaran" },
]
description = "Unofficial Python Api for BSE India stock exchange"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
keywords = ["bse", "bse-stock-data", "stock-market-api", "stock-news-api"]
dependencies = ["requests>=2.31.0", "mthrottle>=0.0.1"]

[project.urls]
"Homepage" = "https://github.com/BennyThadikaran/BseIndiaApi"
"Bug Tracker" = "https://github.com/BennyThadikaran/BseIndiaApi/issues"

[tool.hatch.build.targets.sdist]
exclude = ["docs", "tests", ".github", "src/samples", "src/examples"]

[tool.hatch.build.targets.wheel]
exclude = ["docs", "tests", ".github", "src/samples", "src/examples"]
